// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HashCard Component shallow renders 1`] = `
<div
  className="sc-AxirZ kuBNtT"
>
  <div
    className="hash__card__content__panel"
    id="hash_content"
  >
    <div
      className="hash__title"
    >
      hash title
    </div>
    <div
      className="hash__card__hash__content"
    >
      <div
        id="hash__text"
      >
        <span
          className="monospace"
        >
          0xa18fdb8a
        </span>
      </div>
      <div
        className="sc-AxhCb dnXiiO hash__copy_icon"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="button"
        tabIndex={-1}
      >
        <img
          alt="copy"
          src="copy.png"
        />
      </div>
    </div>
    
    <div
      className="monospace"
      id="hash__value"
    >
      0xa18fdb8a
    </div>
  </div>
</div>
`;

exports[`HashCard Component shallow renders 2`] = `
<div
  className="sc-AxirZ kuBNtT"
>
  <div
    className="hash__card__content__panel"
    id="hash_content"
  >
    <div
      className="hash__title"
    >
      hash title
    </div>
    <div
      className="hash__card__hash__content"
    >
      <div
        className="sc-AxiKw hSLCUF"
      >
        <div
          className="sc-AxjAm feiBFQ"
        >
          <img
            alt="loading"
            src="loading.gif"
          />
        </div>
      </div>
      <div
        className="sc-AxhCb dnXiiO hash__copy_icon"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="button"
        tabIndex={-1}
      />
    </div>
    
    <div
      className="monospace"
      id="hash__value"
    >
      0xa18fdb8a
    </div>
  </div>
</div>
`;
